Fixed viewport issues with Watch page player on IE

--- a/css/Watch.css
+++ b/css/Watch.css
@@ -280,7 +280,7 @@
 
 @media only screen and (min-width: 1000px) {
     .watch-body:not(.theater-body) .content-wrapper {
-        width: auto;
+        width: 100%;
     }
 }
 
